# libbitcashminer

./: CMakeLists.txt  README.md
include/: README.md
include/bitcash/: miner.hpp
include/bitcash/crypto/: siphash.h
include/bitcash/cuckoo/: mean_cuckoo.h
include/bitcash/miner/: miner.hpp
include/bitcash/nvml/: nvml.h
include/bitcash/stratum/: stratum.hpp
include/bitcash/util/: util.hpp  work.hpp
src/: README.md  minerd.cpp  public.cpp
src/blake2/: blake2b-ref.c
src/cuckoo/: mean_cuckoo.cpp
src/cuckoo/gpu/: exceptions.h  kernel.cu
src/miner/: miner.cpp
src/nvml/: nvml.cpp
src/stratum/: stratum.cpp
src/util/: util.cpp
